<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;

class User extends Authenticatable
{
    /** @use HasFactory<\Database\Factories\UserFactory> */
    use HasFactory, Notifiable;

    /**
     * The attributes that are mass assignable.
     *
     * @var list<string>
     */
    protected $fillable = [
        'name',
        'username',
        'email',
        'password',
        'role',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var list<string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * Get the attributes that should be cast.
     *
     * @return array<string, string>
     */
    protected function casts(): array
    {
        return [
            'email_verified_at' => 'datetime',
            'password' => 'hashed',
        ];
    }

    public function kelas()
    {
        return $this->belongsTo(Kelas::class);
    }

    public function mapels()
    {
        return $this->belongsToMany(Mapel::class, 'guru_mapel', 'guru_id', 'mapel_id');
    }

    public function materi()
    {
        return $this->hasMany(Materi::class, 'guru_id');
    }

    public function tugas()
    {
        return $this->hasMany(Tugas::class, 'guru_id');
    }

    public function nilai()
    {
        return $this->hasMany(Nilai::class, 'siswa_id');
    }

    public function absensi()
    {
        return $this->hasMany(Absensi::class, 'siswa_id');
    }

    public function materiRekomendasi()
    {
        return $this->hasMany(MateriRekomendasi::class, 'siswa_id');
    }

    public function jawaban()
    {
        return $this->hasMany(Jawaban::class, 'siswa_id');
    }

    public function isAdmin()
    {
        return $this->role === 'admin';
    }

    public function isSekdes()
    {
        return $this->role === 'sekdes';
    }

    public function isKades()
    {
        return $this->role === 'kades';
    }

    public function canManageSurat(): bool
    {
        return $this->isAdmin();
    }

    public function canViewSurat(): bool
    {
        return $this->isAdmin() || $this->isSekdes() || $this->isKades();
    }

    public function canCreateDisposisi(): bool
    {
        return $this->isSekdes() || $this->isKades();
    }

    public function canManageUsers(): bool
    {
        return $this->isAdmin();
    }

    public function canExportLaporan(): bool
    {
        return $this->isAdmin() || $this->isSekdes() || $this->isKades();
    }

    public function guruProfile()
    {
        return $this->hasOne(GuruProfile::class);
    }

    public function siswaProfile()
    {
        return $this->hasOne(SiswaProfile::class);
    }
}
